--- a/Kinect_v2/Kinect_v2/Kinect_v2.csproj
+++ b/Kinect_v2/Kinect_v2/Kinect_v2.csproj
@@ -62,7 +62,13 @@
     <Compile Include="HandJointForm.Designer.cs">
       <DependentUpon>HandJointForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="KinectForm.cs" />
+    <Compile Include="KinectForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="KinectForm.Designer.cs">
+      <DependentUpon>KinectForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="KinectPresenter.cs" />
     <Compile Include="KinectModel.cs" />
     <Compile Include="MenuForm.cs">
       <SubType>Form</SubType>
@@ -74,6 +80,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HandJointForm.resx">
+      <DependentUpon>HandJointForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="KinectForm.resx">
+      <DependentUpon>KinectForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MenuForm.resx">
       <DependentUpon>MenuForm.cs</DependentUpon>
