--- a/Kinect_v2/Kinect_v2/Kinect_v2.csproj
+++ b/Kinect_v2/Kinect_v2/Kinect_v2.csproj
@@ -37,6 +37,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>bin\Debug\Microsoft.Kinect.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -57,6 +61,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Gesture.cs" />
     <Compile Include="HandJointForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -79,12 +84,14 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SampleRecordFrom.cs">
+    <Compile Include="SampleRecordForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="SampleRecordFrom.Designer.cs">
-      <DependentUpon>SampleRecordFrom.cs</DependentUpon>
+    <Compile Include="SampleRecordForm.Designer.cs">
+      <DependentUpon>SampleRecordForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Skeleton.cs" />
+    <Compile Include="SkeletonFileConvertor.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -106,9 +113,10 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="SampleRecordFrom.resx">
-      <DependentUpon>SampleRecordFrom.cs</DependentUpon>
+    <EmbeddedResource Include="SampleRecordForm.resx">
+      <DependentUpon>SampleRecordForm.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
