--- a/Kinect_v2/Kinect_v2/Kinect_v2.csproj
+++ b/Kinect_v2/Kinect_v2/Kinect_v2.csproj
@@ -54,54 +54,56 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DtwGestureRecognizer.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="extends\Drawer.cs" />
+    <Compile Include="extends\DtwGestureRecognizer.cs" />
+    <Compile Include="extends\Extension.cs" />
+    <Compile Include="Forms\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
+    <Compile Include="Forms\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Gesture.cs" />
-    <Compile Include="HandJointForm.cs">
+    <Compile Include="extends\Gesture.cs" />
+    <Compile Include="Forms\HandJointForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="HandJointForm.Designer.cs">
+    <Compile Include="Forms\HandJointForm.Designer.cs">
       <DependentUpon>HandJointForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="KinectForm.cs">
+    <Compile Include="Forms\KinectForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="KinectForm.Designer.cs">
+    <Compile Include="Forms\KinectForm.Designer.cs">
       <DependentUpon>KinectForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="KinectPresenter.cs" />
-    <Compile Include="KinectModel.cs" />
-    <Compile Include="MenuForm.cs">
+    <Compile Include="Presenters\KinectPresenter.cs" />
+    <Compile Include="Model\KinectModel.cs" />
+    <Compile Include="Forms\MenuForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MenuForm.Designer.cs">
+    <Compile Include="Forms\MenuForm.Designer.cs">
       <DependentUpon>MenuForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SampleRecordForm.cs">
+    <Compile Include="Forms\SampleRecordForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="SampleRecordForm.Designer.cs">
+    <Compile Include="Forms\SampleRecordForm.Designer.cs">
       <DependentUpon>SampleRecordForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Skeleton.cs" />
-    <Compile Include="SkeletonFileConvertor.cs" />
-    <EmbeddedResource Include="Form1.resx">
+    <Compile Include="extends\Skeleton.cs" />
+    <Compile Include="extends\SkeletonFileConvertor.cs" />
+    <EmbeddedResource Include="Forms\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="HandJointForm.resx">
+    <EmbeddedResource Include="Forms\HandJointForm.resx">
       <DependentUpon>HandJointForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="KinectForm.resx">
+    <EmbeddedResource Include="Forms\KinectForm.resx">
       <DependentUpon>KinectForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MenuForm.resx">
+    <EmbeddedResource Include="Forms\MenuForm.resx">
       <DependentUpon>MenuForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -113,7 +115,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="SampleRecordForm.resx">
+    <EmbeddedResource Include="Forms\SampleRecordForm.resx">
       <DependentUpon>SampleRecordForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
