--- a/Kinect_WpfProject/Kinect_WpfProject/Kinect_WpfProject.csproj
+++ b/Kinect_WpfProject/Kinect_WpfProject/Kinect_WpfProject.csproj
@@ -76,7 +76,7 @@
     <Compile Include="Model\KinectModel.cs" />
     <Compile Include="Model\RelayCommand.cs" />
     <Compile Include="Model\SkeletonFileConvertor.cs" />
-    <Compile Include="ViewModel\KinectViewModel.cs" />
+    <Compile Include="ViewModel\SampleRecordViewModel.cs" />
     <Compile Include="ViewModel\PostsViewModel.cs" />
     <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
