fileconvertor unit test.

--- a/Kinect_WpfProject/UnitTestProject/UnitTestProject.csproj
+++ b/Kinect_WpfProject/UnitTestProject/UnitTestProject.csproj
@@ -50,8 +50,14 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="SkeletonFileConvertorTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Kinect_WpfProject\Kinect_WpfProject.csproj">
+      <Project>{fa0d4eeb-6292-4f70-a285-cf91356ea795}</Project>
+      <Name>Kinect_WpfProject</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
