--- a/Kinect_WpfProject/Kinect_WpfProject/Kinect_WpfProject.csproj
+++ b/Kinect_WpfProject/Kinect_WpfProject/Kinect_WpfProject.csproj
@@ -41,6 +41,7 @@
     <Reference Include="Microsoft.Kinect, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -59,7 +60,9 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Model\KinectCamera.cs" />
+    <Compile Include="Model\KinectControl.cs" />
     <Compile Include="Model\Model.cs" />
+    <Compile Include="Model\MouseControl.cs" />
     <Compile Include="Model\Skeleton.cs" />
     <Compile Include="Model\TimerTool.cs" />
     <Compile Include="ViewModel\DebuggerConverter.cs" />
